--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "typescript": "^5.2.2"
     },
     "dependencies": {
-        "@project-serum/borsh": "^0.2.5",
         "@solana/web3.js": "^1.78.4",
+        "borsh": "^1.0.0",
         "dotenv": "^16.3.1"
     }
 }
